--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<link rel="icon" href="/icons/order-icon.png" type="image/png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="/styles.css" crossorigin="use-credentials" />
 </head>
@@ -23,6 +23,8 @@
 <body style="font-family:'Times New Roman', Times, serif">
 	<div id="root"></div>
 	<script type="module" src="/src/main.jsx"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
